[package]
name = "adb_cmd"
version = "0.1.0"
authors = ["batnyu <vrignaudbaptiste@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
anyhow = "1.0.38"
regex = "1"
lazy_static = "1.4.0"
rayon = "1.5.0"

[profile.release]
debug = true